--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="col-xl-10 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"> <span>Encontro de Computação</span>  <br>do Oeste Potiguar</h1>
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span>2022</span></h1>
-            <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Dias x y z de mes Pau dos erros</p>
+            <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Dias x y z de mes Pau dos Ferros</p>
             <div id="timer" class="d-flex mb-3">
 						  <div class="time" id="days"></div>
 						  <div class="time pl-4" id="hours"></div>
@@ -73,7 +73,7 @@
             <div class="media block-6 services d-block">
               <div class="icon"><span class="flaticon-world"></span></div>
               <div class="media-body">
-                <h3 class="heading mb-3">Mini Cursost</h3>
+                <h3 class="heading mb-3">Mini Cursos</h3>
                 <p>Vários mini cursos para aprimorar seus conhecimentos</p>
               </div>
             </div>    
