--- a/index.html
+++ b/index.html
@@ -99,6 +99,41 @@
         </div>
       </div>
     </section>
+
+		<section class="ftco-gallery">
+    	<div class="container-wrap">
+    		<div class="row no-gutters">
+					<div class="col-md-3 ftco-animate">
+						<a href="images/_MGIMG_5677.JPG" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/IMG_5677.JPG);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/_MG_6679.JPG" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/_MG_6679.JPG);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/_MG_5683.JPG" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/_MG_5683.JPG);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+					<div class="col-md-3 ftco-animate">
+						<a href="images/20190522_102324.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/20190522_102324.jpg);">
+							<div class="icon mb-4 d-flex align-items-center justify-content-center">
+    						<span class="icon-instagram"></span>
+    					</div>
+						</a>
+					</div>
+        </div>
+    	</div>
+    </section>
    	
     
     <section class="ftco-section">
@@ -623,9 +658,8 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved UFERSA| Desenvolvido <i class="icon-heart color-danger" aria-hidden="true"></i> por <a href="https://colorlib.com" target="_blank">Eric Santos</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            <p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os Direitos Reservados á UFERSA | Desenvolvido <i class="icon-heart color-danger" aria-hidden="true"></i> por <a href="https://colorlib.com" target="_blank">Eric Santos</a></p>
           </div>
         </div>
       </div>
