--- a/index.html
+++ b/index.html
@@ -263,180 +263,46 @@
     </section>
 		
 
-		<section class="ftco-section bg-light">
-			<div class="container">
-				<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-          	<span class="subheading">Cronograma</span>
-            <h2 class="mb-4"><span>Cronograma</span> Do Evento</h2>
+    <section class="ftco-section-parallax">
+      <div class="parallax-img d-flex align-items-center">
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
+              <h2>Cronograma</h2>
+              <p>Eventos dos dias</p>
+              <div class="container text-center">
+                <div class="row">
+                  <div class="col">
+                    <p>Dia 19</p>
+                  </div>
+                  <div class="col">
+                    <p>Dia 20</p>
+                  </div>
+                  <div class="col">
+                    <p>Dia 21</p>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col">
+                    <p>Dia 19</p>
+                  </div>
+                  <div class="col">
+                    <p>Dia 20</p>
+                  </div>
+                  <div class="col">
+                    <p>Dia 21</p>
+                  </div>
+                </div>
+
+              </div>
+              
+              </div>
+            </div>
           </div>
         </div>
-        <div class="ftco-search">
-					<div class="row">
-            <div class="col-md-12 nav-link-wrap">
-	            <div class="nav nav-pills d-flex text-center" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-	              <a class="nav-link ftco-animate active" id="v-pills-1-tab" data-toggle="pill" href="#v-pills-1" role="tab" aria-controls="v-pills-1" aria-selected="true">1º Dia <span>19 de Out</span></a>
-
-	              <a class="nav-link ftco-animate" id="v-pills-2-tab" data-toggle="pill" href="#v-pills-2" role="tab" aria-controls="v-pills-2" aria-selected="false">2º Dia <span>20 de Out</span></a>
-
-	              <a class="nav-link ftco-animate" id="v-pills-3-tab" data-toggle="pill" href="#v-pills-3" role="tab" aria-controls="v-pills-3" aria-selected="false">3º Dia <span>21 de Out</span></a>
-
-
-	            </div>
-	          </div>
-	          <div class="col-md-12 tab-wrap">
-	            
-	            <div class="tab-content" id="v-pills-tabContent">
-
-	              <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="day-1-tab">
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/credenciamento.png);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">08:00 - 09:00</span>
-	              			<h2><a href="#">Credenciamento</a></h2>
-	              			<p> Credenciamento dos participantes </p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">CC</a> <span class="position">Em frente ao auditório</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/Icon-Ch1.webp);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">14:00 - 16:00</span>
-	              			<h2><a href="#">Palestras</a></h2>
-	              			<p>Palestras sobre diversos temas</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditório</a> <span class="position">Principal</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/fones-de-ouvido-musica-e-smartphone-icon-ilustracao-conceito-de-tecnologia-isolado_138676-1107.webp);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">18:00 - 20:00</span>
-	              			<h2><a href="#">Momento Cultural</a></h2>
-	              			<p>Apresentações e momento Cultural</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditório</a> <span class="position">Principal</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/cute-astronaut-waving-hand-game-controller-cartoon-vector-icon-illustration-technology-science-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-3714.webp);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">20:00 - 22:00</span>
-	              			<h2><a href="#">ECOP Games</a></h2>
-	              			<p>Momento de Jogos e diversão</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditório</a> <span class="position">e CC</span></h3>
-	              		</div>
-	              	</div>
-	              </div>
-
-	              <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-day-2-tab">
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/images.jpg);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">09:00 - 12:00</span>
-	              			<h2><a href="#">Minicursos/Olimpiada de Programação</a></h2>
-	              			<p>Juntamente com os Minicursos teremos a Olimpiada de Programação</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditórion</a> <span class="position">LTI</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/informal-400x301.jpg
-										);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">14:00 - 16:00</span>
-	              			<h2><a href="#">Mesa Redonda</a></h2>
-	              			<p>Mesa redonda de Temas de tecnologia</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditório</a> <span class="position">Principal</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/ICONE\ HACKATHON\ 08-01.webp);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">16:00 - 17:00</span>
-	              			<h2><a href="#">Hackathon: Início</a></h2>
-	              			<p>Inicio da nossa Hackathon </p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">---</a> <span class="position">----</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/ilustra-plataforma.png);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">17:00 - 18:00</span>
-	              			<h2><a href="#">Trabalhos Científicos</a></h2>
-	              			<p>Apresentação de Trabalhos Científicos  </p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditório</a> <span class="position">Principal</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/images.jpg);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">18:00 - 20:00</span>
-	              			<h2><a href="#">Minicursos</a></h2>
-	              			<p>Minicursos diversos </p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">LTI</a> <span class="position">Lab. 02</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/cute-astronaut-waving-hand-game-controller-cartoon-vector-icon-illustration-technology-science-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-3714.webp);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">16:00 - 17:00</span>
-	              			<h2><a href="#">ECOP Games</a></h2>
-	              			<p>Inicio da nossa Hackathon </p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">---</a> <span class="position">----</span></h3>
-	              		</div>
-	              	</div>
-	              </div>
-	              <div class="tab-pane fade" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-day-3-tab">
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/images.jpg);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">09:00 - 12:00</span>
-	              			<h2><a href="#">Minicursos</a></h2>
-	              			<p>Vários Minicursos</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">LTI</a> <span class="position">Lab. 2</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/ICONE\ HACKATHON\ 08-01.webp);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">14:00 - 16:00</span>
-	              			<h2><a href="#">Hackathon</a></h2>
-	              			<p>Fim da Hackathon e anuncio dos campeões</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditório</a> <span class="position">Principal</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/bertura-de-empresa-site.webp);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">16:00 - 17:00</span>
-	              			<h2><a href="#">Salão Empresarial</a></h2>
-	              			<p>Salão com apresentações das empresas parceiras</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditório</a> <span class="position">Principal</span></h3>
-	              		</div>
-	              	</div>
-
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/images.jpg);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">18:00 - 20:00</span>
-	              			<h2><a href="#">Minicursos</a></h2>
-	              			<p>Vários Minicursos</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">LTI</a> <span class="position">Lab. 02</span></h3>
-	              		</div>
-	              	</div>
-	              	<div class="speaker-wrap ftco-animate d-flex">
-	              		<div class="img speaker-img" style="background-image: url(images/5650444.png);"></div>
-	              		<div class="text pl-md-5">
-	              			<span class="time">20:00 - 22:00</span>
-	              			<h2><a href="#">Encerramento</a></h2>
-	              			<p>Encerramento e até a próxima 😢</p>
-	              			<h3 class="speaker-name">&mdash; <a href="#">Auditório</a> <span class="position">Principal</span></h3>
-	              		</div>
-	              	</div>
-	            </div>
-	          </div>
-	        </div>
-        </div>
-			</div>
-		</section>
+      </div>
+    </section>
 		
 
     <section class="ftco-section testimony-section">
@@ -662,7 +528,7 @@
           <div class="col-md-12 text-center">
 
             <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os Direitos Reservados á UFERSA | Desenvolvido <i class="icon-heart color-danger" aria-hidden="true"></i> por <a href="https://colorlib.com" target="_blank">Eric Santos</a></p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os Direitos Reservados á UFERSA 🎓 | Desenvolvido ❤️ por Eric Santos & Livia Maia</p>
           </div>
         </div>
       </div>
