--- a/index.html
+++ b/index.html
@@ -504,6 +504,8 @@
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 
                 <li class="ftco-animate"><a href="https://www.instagram.com/ecop.ufersa/"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCw51fRtUWNo8qewW9bzairw"><span class="icon-youtube"></span></a></li>
+                
               </ul>
             </div>
           </div>
