--- a/index.html
+++ b/index.html
@@ -505,12 +505,6 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Sobre o evento</h2>
               <p>É um evento com objetivo de promover o desenvolvimento científico-tecnológico levando aos discentes  temas atuais voltados à tecnologia. No ECOP, além de palestras, minicursos, mesas redondas, os participantes terão contato com startups e empresas ligadas à inovação tecnológica trazendo um ambiente de inovação e empreendedorismo ao evento.</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                
-                <li class="ftco-animate"><a href="https://www.instagram.com/ecop.ufersa/"><span class="icon-instagram"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCw51fRtUWNo8qewW9bzairw"><span class="icon-youtube"></span></a></li>
-                
-              </ul>
             </div>
           </div>
           <div class="col-md">
@@ -527,6 +521,8 @@
 	                <li><span class="icon icon-map-marker"></span><span class="text">UFERSA, BR-226, s/n, Pau dos Ferros - RN, 59900-000</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">(84)x-xxxx-xxxx</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@UFERSA.com</span></a></li>
+                  <li><a href="https://www.instagram.com/ecop.ufersa/"><span class="icon icon-instagram"></span><span class="text">ecop.ufersa</span></a></li>
+                  <li><a href="https://www.youtube.com/channel/UCw51fRtUWNo8qewW9bzairw"><span class="icon icon-youtube"></span><span class="text">ECOP UFERSA</span></a></li>
 	              </ul>
 	            </div>
             </div>
