footer e header atualizado

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     
-    <title>Ecop Encontro de Computação do Oeste Potiguar </title>
+    <title>V ECOP - Encontro de Computação do Oeste Potiguar </title>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -519,8 +519,8 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">UFERSA, BR-226, s/n, Pau dos Ferros - RN, 59900-000</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">(84)x-xxxx-xxxx</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@UFERSA.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">(84) 3317-8512</span></a></li> 
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">ecop.ufersa@gmail.com</span></a></li>
                   <li><a href="https://www.instagram.com/ecop.ufersa/"><span class="icon icon-instagram"></span><span class="text">ecop.ufersa</span></a></li>
                   <li><a href="https://www.youtube.com/channel/UCw51fRtUWNo8qewW9bzairw"><span class="icon icon-youtube"></span><span class="text">ECOP UFERSA</span></a></li>
 	              </ul>
@@ -532,7 +532,7 @@
           <div class="col-md-12 text-center">
 
             <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os Direitos Reservados á UFERSA 🎓 | Desenvolvido ❤️ por Eric Santos & Livia Maia</p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os Direitos Reservados à UFERSA 🎓 | Desenvolvido ❤️ por Eric Santos & Livia Maia</p>
           </div>
         </div>
       </div>
