--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="parallax-img d-flex align-items-center">
         <div class="container">
           <div class="row d-flex justify-content-center">
-            <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
+            <div class="col-md-9 text-center heading-section heading-section-white ftco-animate">
               <h2>Cronograma</h2>
               <p>Eventos dos dias</p>
               <div class="container text-center">
@@ -279,16 +279,53 @@
                 <div class="row">
                   <div class="col">
                     <p>Dia 19</p>
+                    <p>M A N H Ã</p>
+                    <p>Credenciamento</p>
+                    <p>Mesa Redonda</p>
+                    <hr style="background-color: white; height: 0.3%; border-radius: 5px;">
+                    <p>T A R D E</p>
+                    <p>Palestra 1</p>
+                    <p>Hackathon: Início</p>
+                    <hr style="background-color: white; height: 0.3%; border-radius: 5px;">
+                    <p>N O I T E</p>
+                    <p>Intervalo</p>
+                    <p>Abertura/Momento Cultural</p>
+                    <p>ECOP Games</p>
                   </div>
                   <div class="col">
                     <p>Dia 20</p>
+                    <p>M A N H Ã</p>
+                    <p>Credenciamento</p>
+                    <p>Olimpiada de Programação</p>
+                    <hr style="background-color: white; height: 0.3%; border-radius: 5px;">
+                    <p>T A R D E</p>
+                    <p>Palestra 2</p>
+                    <p>Trabalhos Científicos</p>
+                    <hr style="background-color: white; height: 0.3%; border-radius: 5px;">
+                    <p>N O I T E</p>
+                    <p>Intervalo</p>
+                    <p>Minicursos</p>
+                    <p>ECOP Games</p>
                   </div>
                   <div class="col">
                     <p>Dia 21</p>
+                    <p>M A N H Ã</p>
+                    <p>Loja ECOP</p>
+                    <p>Minicursos</p>
+                    <hr style="background-color: white; height: 0.3%; border-radius: 5px;">
+                    <p>T A R D E</p>
+                    <p>Palestra 3</p>
+                    <p>Salão Empresarial</p>
+                    <hr style="background-color: white; height: 0.3%; border-radius: 5px;">
+                    <p>N O I T E</p>
+                    <p>Hackathon: Fim</p>
+                    <p>Minicursos</p>
+                    <p>ECOP Games</p>
+                    <p>Encerramento/Apresentação Cultural</p>
                   </div>
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                   <div class="col">
                     <p>Dia 19</p>
                   </div>
@@ -298,7 +335,7 @@
                   <div class="col">
                     <p>Dia 21</p>
                   </div>
-                </div>
+                </div> -->
                 
 
               </div>
@@ -493,10 +530,8 @@
         </div>
       </div>
     </section>
-		
+	
 
-		
-    
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
