--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
                 <div class="row">
                   <div class="col">
-                    <p>Dia 19</p>
+                    <p>🚀 ajsldj</p>
                   </div>
                   <div class="col">
                     <p>lorem</p>
