--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 	          <div class="block-7">
 	            <div class="text-center">
 	            <h2 class="heading">Dia</h2>
-	            <span class="price"><span class="number">21 Out</span></span>
+	            <span class="price"><span class="number">19 Out</span></span>
 	            
 	            
 	            <h3 class="heading-2 my-4">Manhã</h3>
@@ -532,7 +532,7 @@
             <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
               <h2>Submeta seu artigo</h2>
               <p>Submeta seu artigo para publicação ou apresentação no evento.</p>
-              <p><h2>Prazo Dia 21 de Agosto de 2022.</h2></p>
+              <p><h2>Prazo Dia 11 de Outubro de 2022.</h2></p>
               <div class="row d-flex justify-content-center mt-4 mb-4">
                 <div class="col-md-8">
                   <form action="#" class="subscribe-form">
