cores de textos principais

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     
-	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+	  <nav class="navbar navbar-expand-lg  ftco_navbar  ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <img src="images/ECOP.png" style="height: 80px;"/>
 	     
@@ -532,7 +532,7 @@
             <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
               <h2>Submeta seu artigo</h2>
               <p>Submeta seu artigo para publicação ou apresentação no evento.</p>
-              <p><h2>Prazo Dia 11 de Outubro de 2022.</h2></p>
+              <p><h2>Prazo Dia 11 de Setembro de 2022.</h2></p>
               <div class="row d-flex justify-content-center mt-4 mb-4">
                 <div class="col-md-8">
                   <form action="#" class="subscribe-form">
