alteração em submissões

--- a/index.html
+++ b/index.html
@@ -148,45 +148,25 @@
       </div>
     </section>
 
-
-    <section class="ftco-section services-section bg-light">
-      <div class="container">
-        <div class="row d-flex">
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block">
-              <div class="icon"><span class="flaticon-guest"></span></div>
-              <div class="media-body">
-                <h3 class="heading mb-3">Palestras</h3>
-                <p>	Diversas palestras de Diferentes temas de Computação</p>
+    <section class="ftco-section-parallax">
+      <div class="parallax-img d-flex align-items-center">
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
+              <h2>Submeta seu artigo</h2>
+              <p>Submeta seu artigo para publicação ou apresentação no evento.</p>
+              <p><h2>Prazo Dia 11 de Setembro de 2022.</h2></p>
+              <div class="row d-flex justify-content-center mt-4 mb-4">
+                <div class="col-md-8">
+                  <form action="#" class="subscribe-form">
+                    <div class="form-group d-flex justify-content-center">
+                     
+                      <a href="https://easychair.org/cfp/ECOP2022"><div class="btn btn-info" >Saiba Mais</div></a>
+                    </div>
+                  </form>
+                </div>
               </div>
-            </div>      
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block">
-              <div class="icon"><span class="flaticon-world"></span></div>
-              <div class="media-body">
-                <h3 class="heading mb-3">Mini Cursos</h3>
-                <p>Vários mini cursos para aprimorar seus conhecimentos</p>
-              </div>
-            </div>    
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block">
-              <div class="icon"><span class="flaticon-hotel"></span></div>
-              <div class="media-body">
-                <h3 class="heading mb-3">Networking</h3>
-                <p>Conectando os grandes hosts de tecnologia com os alunos</p>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block">
-              <div class="icon"><span class="flaticon-cooking"></span></div>
-              <div class="media-body">
-                <h3 class="heading mb-3">Parcerias</h3>
-                <p>Parcerias com empresas </p>
-              </div>
-            </div>      
+            </div>
           </div>
         </div>
       </div>
@@ -194,6 +174,9 @@
 
 		<section class="ftco-gallery">
     	<div class="container-wrap">
+        <div class="col-md-7 text-center heading-section ftco-animate justify-content-center">
+          <h2 class="mb-4 "></h2>
+        </div>
     		<div class="row no-gutters">
 					<div class="col-md-3 ftco-animate">
 						<a href="images/_MGIMG_5677.JPG" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/IMG_5677.JPG);">
@@ -364,7 +347,48 @@
       </div>
     </section>
 		
-		
+		<section class="ftco-section services-section bg-light">
+      <div class="container">
+        <div class="row d-flex">
+          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services d-block">
+              <div class="icon"><span class="flaticon-guest"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">Palestras</h3>
+                <p>	Diversas palestras de Diferentes temas de Computação</p>
+              </div>
+            </div>      
+          </div>
+          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services d-block">
+              <div class="icon"><span class="flaticon-world"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">Mini Cursos</h3>
+                <p>Vários mini cursos para aprimorar seus conhecimentos</p>
+              </div>
+            </div>    
+          </div>
+          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services d-block">
+              <div class="icon"><span class="flaticon-hotel"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">Networking</h3>
+                <p>Conectando os grandes hosts de tecnologia com os alunos</p>
+              </div>
+            </div>      
+          </div>
+          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
+            <div class="media block-6 services d-block">
+              <div class="icon"><span class="flaticon-cooking"></span></div>
+              <div class="media-body">
+                <h3 class="heading mb-3">Parcerias</h3>
+                <p>Parcerias com empresas </p>
+              </div>
+            </div>      
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="ftco-section testimony-section">
       <div class="container">
@@ -524,32 +548,6 @@
         </div>
       </div>
     </section> -->
-		
-		<section class="ftco-section-parallax">
-      <div class="parallax-img d-flex align-items-center">
-        <div class="container">
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-              <h2>Submeta seu artigo</h2>
-              <p>Submeta seu artigo para publicação ou apresentação no evento.</p>
-              <p><h2>Prazo Dia 11 de Setembro de 2022.</h2></p>
-              <div class="row d-flex justify-content-center mt-4 mb-4">
-                <div class="col-md-8">
-                  <form action="#" class="subscribe-form">
-                    <div class="form-group d-flex justify-content-center">
-                     
-                      <a href="https://easychair.org/cfp/ECOP2022"><div class="btn btn-info" >Saiba Mais</div></a>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-	
-
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
